--- a/EkgDroid/app/src/main/res/layout/activity_daftar.xml
+++ b/EkgDroid/app/src/main/res/layout/activity_daftar.xml
@@ -98,6 +98,25 @@
                 android:inputType="text" />
 
             <TextView
+                android:id="@+id/lbl_mail"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:paddingStart="8dp"
+                android:paddingTop="8dp"
+                android:text="@string/lbl_mail"
+                android:textAlignment="textStart" />
+
+            <EditText
+                android:id="@+id/input_mail"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_weight="1"
+                android:ems="10"
+                android:inputType="textEmailAddress" />
+
+            <TextView
                 android:id="@+id/lbl_sandi"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
