--- a/EkgDroid/app/src/main/res/values/colors.xml
+++ b/EkgDroid/app/src/main/res/values/colors.xml
@@ -7,4 +7,6 @@
     <color name="color_skygrey">#cce0e6</color>
     <color name="color_trans_black">#80000000</color>
     <color name="color_hot_red">#ff0000</color>
+    <color name="color_navy_blue">#637e9e</color>
+    <color name="color_dark_navy_blue">#405974</color>
 </resources>
